update product
