# src/routes/index.js
@@ -1,13 +1,12 @@
-import { Router } from "express";
-
 import categoryRoutes from "../modules/category/category.routes.js";
-import productsRoutes from '../modules/product/productRoutes.js';
+import subCategoryRoutes from "../modules/subcategory/subcategory.routes.js";
+import productRoutes from "../modules/product/product.routes.js";
 
+const router = Router();
 
-const router = Router()
+// router.use("/products", productRoutes);
+router.use("/categories", categoryRoutes);
+router.use("/sub-categories", subCategoryRoutes);
+router.use("/products", productRoutes);
 
-router.use("/products",productsRoutes)
-router.use("/categories",categoryRoutes)
-
-export default router; 
-
+export default router;
